--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,10 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<fork>true</fork>
+					<mainClass>br.edu.moedaestudantil.MoedaEstudantilApplication</mainClass>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
