--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
 	<description>Moeda Estudantil - Sistema de moeda virtual para estudantes</description>
 	<properties>
 		<java.version>17</java.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -72,6 +74,13 @@
 				<configuration>
 					<fork>true</fork>
 					<mainClass>br.edu.moedaestudantil.MoedaEstudantilApplication</mainClass>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-resources-plugin</artifactId>
+				<configuration>
+					<encoding>UTF-8</encoding>
 				</configuration>
 			</plugin>
 		</plugins>
