--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,5 +1,13 @@
+# Build
+FROM maven:3.9.4-eclipse-temurin-17 AS build
+WORKDIR /workspace
+COPY pom.xml .
+COPY src ./src
+RUN mvn -DskipTests package -q
+
+# Run 
 FROM eclipse-temurin:17-jdk-alpine
 WORKDIR /app
-COPY target/*.jar app.jar
+COPY --from=build /workspace/target/*.jar app.jar
 EXPOSE 8080
-ENTRYPOINT ["java","-jar","app.jar"]
+ENTRYPOINT ["sh","-c","java -Dserver.port=$PORT -jar app.jar"]
