--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # PostgreSQL Railway
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_USER}
-spring.datasource.password=${DB_PASS}
+spring.datasource.url=jdbc:postgresql://interchange.proxy.rlwy.net:36070/railway
+spring.datasource.username=postgres
+spring.datasource.password=MfXzSIGrSkYJKQdEnhRaukVYXMZsuLQh
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA
